<resources>
    <string name="app_name">Adomzone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> </string>
    <string name="concepto">Concepto</string>
    <string name="name">Name</string>
    <string name="go">Ir</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="agradecimientos">Agradecimientos</string>
    <string name="back">Vovler</string>
    <string name="profile">Perfil</string>
    <string name="feedback">Retroalimentacion</string>
    <string name="settings">Ajustes</string>
    <string name="home">Casita</string>
    <string name="gallery">Galeria</string>
    <string name="closet">Armario</string>
    <string name="wallet">Cartera</string>
    <string name="photos">Fotos</string>
    <string name="eliminacionDefinitiva">Eliminación definitiva del personaje.</string>
    <string name="eliminarSegurx">Estás segurx de que quieres eliminar el personaje?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
</resources>