<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/logoadom2"
    >
<!-- Resalte de elemento seleccionado -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/characterGalleryFragment2"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/gallery"
            android:textColor="@color/moraro"
            app:showAsAction="always" />

        <item
            android:id="@+id/homeFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:textColor="@color/moraro"
            android:title="@string/home"
            app:showAsAction="always" />
    </group>
    <item android:title="More">
        <menu>
            <item
                android:id="@+id/profileFragment"
                android:icon="@drawable/user"
                android:textColor="@color/moraro"
                android:title="@string/profile"
                app:showAsAction="always" />
            <item
                android:id="@+id/feedbackFragment"
                android:icon="@android:drawable/ic_menu_agenda"
                android:textColor="@color/moraro"
                android:title="@string/feedback"
                app:showAsAction="always" />
            <item
                android:id="@+id/settingsFragment"
                android:icon="@android:drawable/ic_menu_preferences"
                android:textColor="@color/moraro"
                android:title="@string/settings"
                app:showAsAction="always" />

        </menu>
    </item>
</menu>